--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,19 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .app {
     margin: auto;
     margin-top: 80px;
-    width: 400px;
-    border: 2px solid #333;
+    width: 300px;
+    box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.5);
+    background: rgba(10, 10, 10, 0.80);
+    color: #fff;
+}
+.container {
+    padding: 20px;
 }
 
 #todoDisplay {
@@ -11,7 +22,62 @@
     overflow: auto;
 }
 
+#todoDisplay ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#todoDisplay ul li {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+    padding: 5px 10px;
+}
+
+#todoDisplay ul li a,
+#todoDisplay h3 {
+    letter-spacing: 1px;
+}
+
+#list li:nth-child(odd) {
+    background-color: rgba(145, 138, 126, 0.3);
+}
+
+#searchForm,
+#addForm {
+    display: flex;
+    margin: 10px;
+}
+
+#searchTodo,
+#addTodo {
+    width: 100%;
+    height: 20px;
+    outline: none;
+}
+
+#searchTodo {
+    margin-left: 10px;
+}
+
+#addTodo {
+    margin-right: 10px;
+}
+
+#addForm button {
+    padding: 0 10px;
+    border: none;
+    font-weight: bold;
+    background-color: transparent;
+    border: 1px solid #cecece;
+    color: #fff;
+}
+
+#addForm button:hover {
+    background-color: green;
+}
+
 .deleteImg {
-    width: 20px;
+    width: 15px;
     height: 100%;
 }
